--- a/index.html
+++ b/index.html
@@ -7,255 +7,140 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-:root {
-  --bg-gradient: linear-gradient(135deg, #c1f0f6, #fddde6);
-  --card-bg: rgba(255, 255, 255, 0.8);
-  --text-color: #333;
-  --muted-color: #666;
-  --temp-color: #ff6b6b;
-  --hum-color: #4dabf7;
-  --border-color: rgba(0,0,0,0.1);
-  --shadow: 0 8px 20px rgba(0,0,0,0.15);
-}
-
 body {
-  font-family: 'Poppins', sans-serif;
-  min-height: 100vh;
-  background: var(--bg-gradient);
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 20px;
-  color: var(--text-color);
-  overflow-x: hidden;
-  position: relative;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+    background: linear-gradient(135deg, #ffecd2, #fcb69f, #a1c4fd, #c2e9fb);
+    margin: 0;
+    color: #333;
+    overflow-x: hidden;
+    position: relative;
 }
 
-/* --- Bubble Background --- */
+/* ฟองอากาศ */
 .bubble {
-  position: absolute;
-  border-radius: 50%;
-  opacity: 0.5;
-  background: rgba(255, 255, 255, 0.3);
-  animation: rise 15s infinite;
+    position: absolute;
+    border-radius: 50%;
+    opacity: 0.6;
+    background: rgba(255, 255, 255, 0.3);
+    animation: rise 15s infinite;
 }
 @keyframes rise {
-  0% { transform: translateY(100vh) scale(0.5); opacity:0.5; }
-  50% { opacity: 0.8; }
-  100% { transform: translateY(-10vh) scale(1); opacity:0; }
+    0% { transform: translateY(100vh) scale(0.5); opacity: 0.5; }
+    50% { opacity: 0.8; }
+    100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
-/* --- Board & Cards --- */
-.board {
-  max-width: 1200px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-gap: 20px;
+/* Card layout */
+.container {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5em;
 }
-
-.bar {
-  grid-column: 1/-1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 25px;
-  background: var(--card-bg);
-  border-radius: 15px;
-  box-shadow: var(--shadow);
-  margin-bottom: 20px;
-  font-weight: 600;
-  font-size: 1.2rem;
-}
-
 .card {
-  background: var(--card-bg);
-  border-radius: 16px;
-  padding: 2em;
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  backdrop-filter: blur(6px);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-align: center;
+    padding: 2em 3em;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    backdrop-filter: blur(6px);
 }
 .card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 12px 25px rgba(0,0,0,0.15);
+    transform: translateY(-6px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+h1 { color: #2c3e50; margin-bottom: 10px; font-weight: 700; }
+.label { font-size: 1.2em; font-weight: 600; color: #7f8c8d; margin-bottom: 10px; }
+.value { font-size: 4em; font-weight: 700; margin: 0; }
+.unit { font-size: 1.3em; color: #95a5a6; }
+#temperature-value { color: #ff6b6b; }
+#humidity-value { color: #4dabf7; }
+
+.status-message {
+    margin-top: 1.5em;
+    color: #555;
+    font-size: 1em;
+    background-color: rgba(255,255,255,0.7);
+    padding: 10px 20px;
+    border-radius: 8px;
+    backdrop-filter: blur(5px);
 }
 
-.main {
-  font-size: 2rem;
-  color: var(--temp-color);
+table {
+    margin-top: 2em;
+    width: 100%;
+    max-width: 600px;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.85);
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6px);
 }
+th, td { padding: 12px 16px; text-align: center; border-bottom: 1px solid #eee; }
+th { background: #a1c4fd; color: #fff; }
+tr:hover { background: rgba(255,255,255,0.4); }
 
-.tempRow {
-  display: flex;
-  align-items: baseline;
-  gap: 5px;
-  font-size: 2.5rem;
-  font-weight: 700;
+/* Chart */
+#chart-container {
+    margin-top: 2em;
+    width: 100%;
+    max-width: 700px;
+    background: rgba(255,255,255,0.85);
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    backdrop-filter: blur(6px);
 }
-
-.unit {
-  font-size: 1.5rem;
-  color: var(--muted-color);
-}
-
-.subtext {
-  margin-top: 8px;
-  font-size: 1rem;
-  color: var(--muted-color);
-}
-
-.side .card {
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.donut {
-  --p:0;
-  width: 80px; height: 80px;
-  border-radius: 50%;
-  background: conic-gradient(var(--hum-color) calc(var(--p) * 1%), #eee 0);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 700;
-  color: var(--text-color);
-  margin-left: auto;
-}
-
-.chart-card {
-  grid-column: 1/-1;
-  padding: 20px;
-}
-
-canvas {
-  width: 100%;
-  height: 250px;
-}
-
-.history table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-  background: var(--card-bg);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.history th, .history td {
-  padding: 10px;
-  text-align: center;
-  border-bottom: 1px solid var(--border-color);
-}
-
-.history th {
-  background: #a1c4fd;
-  color: #fff;
-}
-
-.status-wrap {
-  font-weight: 600;
-  font-size: 0.9rem;
-  text-align: center;
-  padding: 10px;
-  border-radius: 10px;
-  background: #fff3;
-}
-
-.legend {
-  display: flex;
-  gap: 15px;
-  margin-bottom: 10px;
-  font-size: 0.9rem;
-  color: var(--muted-color);
-}
-
-.dot {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  margin-right: 4px;
-}
-
-.dot.t { background: var(--temp-color); }
-.dot.h { background: var(--hum-color); }
 </style>
 </head>
 <body>
+<h1>Current Weather Conditions</h1>
 <div id="bubbles"></div>
 
-<div class="board">
-  <div class="bar">
-    <div>Temperature & Humidity Dashboard</div>
-    <div id="clock">--:--:--</div>
-  </div>
-
-  <section class="card main">
-    <div>🌡️</div>
-    <div class="tempRow">
-      <div id="temperature-value">--</div>
-      <div class="unit">°C</div>
-    </div>
-    <div class="subtext">Temperature</div>
-  </section>
-
-  <section class="side">
+<div class="container">
     <div class="card">
-      <div>💧 Humidity</div>
-      <div class="donut" id="humidity-donut" style="--p:0">
-        <span id="humidity-value">--%</span>
-      </div>
+        <div class="label">Temperature 🌡️</div>
+        <div class="value" id="temperature-value">--</div>
+        <span class="unit">°C</span>
     </div>
-    <div class="card status-wrap">
-      <div id="status-message">Connecting...</div>
+    <div class="card">
+        <div class="label">Humidity 💧</div>
+        <div class="value" id="humidity-value">--</div>
+        <span class="unit">%</span>
     </div>
-  </section>
-
-  <section class="card chart-card">
-    <div class="legend">
-      <span><span class="dot t"></span>Temp</span>
-      <span><span class="dot h"></span>Humidity</span>
-    </div>
-    <canvas id="chart"></canvas>
-  </section>
-
-  <section class="card history">
-    <h3 style="margin-bottom:10px; color:#333">History (MongoDB)</h3>
-    <div class="table-wrap">
-      <table>
-        <thead>
-          <tr>
-            <th>Time</th>
-            <th>Temperature (°C)</th>
-            <th>Humidity (%RH)</th>
-          </tr>
-        </thead>
-        <tbody id="history-body"></tbody>
-      </table>
-    </div>
-  </section>
 </div>
 
+<div class="status-message" id="status-message">Connecting...</div>
+
+<h2>History (latest 20 records)</h2>
+<table id="history-table">
+    <thead>
+        <tr>
+            <th>Time</th>
+            <th>Temperature (°C)</th>
+            <th>Humidity (%)</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
+<div id="chart-container">
+    <canvas id="weatherChart"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 const BACKEND_BASE = "https://dht-69wz.onrender.com";
-const MAX_POINTS = 60;
-const series = { t: [], h: [], ts: [] };
-
-const setText = (id,val)=>{const el=document.getElementById(id); if(el) el.textContent=val;}
-
-// --- Clock ---
-function updateClock(){
-  const el=document.getElementById('clock'); 
-  if(!el) return;
-  el.textContent = new Date().toLocaleTimeString('en-US',{hour12:false,timeZone:'Asia/Bangkok'});
-}
-updateClock(); setInterval(updateClock,1000);
+const MAX_HISTORY = 20;
 
 // --- Bubble animation ---
 const bubblesContainer = document.getElementById('bubbles');
@@ -271,101 +156,87 @@ for(let i=0;i<30;i++){
     bubblesContainer.appendChild(bubble);
 }
 
-// --- Chart ---
-const canvas=document.getElementById('chart');
-const ctx=canvas.getContext('2d');
-let dpi=window.devicePixelRatio||1;
-function resizeCanvas(){
-  const rect=canvas.getBoundingClientRect();
-  canvas.width=Math.round(rect.width*dpi);
-  canvas.height=Math.round(rect.height*dpi);
-  drawChart();
-}
-window.addEventListener('resize',resizeCanvas);
-resizeCanvas();
-
-function pushPoint(temp,hum,ts=Date.now()){
-  series.t.push(Number(temp));
-  series.h.push(Number(hum));
-  series.ts.push(Number(ts));
-  if(series.t.length>MAX_POINTS){series.t.shift(); series.h.shift(); series.ts.shift();}
-  drawChart();
-}
-
-function drawChart(){
-  if(!ctx || series.ts.length<2) return;
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  const w=canvas.width, h=canvas.height, pad=40;
-  const tMin=Math.min(...series.t), tMax=Math.max(...series.t);
-  const hMin=Math.min(...series.h), hMax=Math.max(...series.h);
-
-  ctx.beginPath();
-  series.t.forEach((v,i)=>{
-    const x=pad + i*(w-2*pad)/(series.t.length-1);
-    const y=h-pad-(v-tMin)/(tMax-tMin)*(h-2*pad);
-    if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
-  });
-  ctx.strokeStyle='var(--temp-color)';
-  ctx.lineWidth=2*dpi;
-  ctx.stroke();
-
-  ctx.beginPath();
-  series.h.forEach((v,i)=>{
-    const x=pad + i*(w-2*pad)/(series.h.length-1);
-    const y=h-pad-(v-hMin)/(hMax-hMin)*(h-2*pad);
-    if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
-  });
-  ctx.strokeStyle='var(--hum-color)';
-  ctx.lineWidth=2*dpi;
-  ctx.stroke();
-}
+// --- Chart.js setup ---
+const ctx = document.getElementById('weatherChart').getContext('2d');
+const chartData = { labels: [], datasets: [
+    { label: 'Temperature (°C)', data: [], borderColor:'#ff6b6b', backgroundColor:'rgba(255,107,107,0.2)', tension:0.4 },
+    { label: 'Humidity (%)', data: [], borderColor:'#4dabf7', backgroundColor:'rgba(77,171,247,0.2)', tension:0.4 }
+]};
+const weatherChart = new Chart(ctx,{type:'line',data:chartData,options:{responsive:true,plugins:{legend:{position:'top'}},scales:{x:{title:{display:true,text:'Time'}},y:{beginAtZero:true}}}});
 
 // --- Load history ---
-async function loadHistory(limit=120){
-  try{
-    const res=await fetch(`${BACKEND_BASE}/history?limit=${limit}`,{cache:"no-store"});
-    const docs=await res.json();
-    const tbody=document.getElementById('history-body');
-    tbody.innerHTML='';
-    docs.forEach(d=>{
-      const tsThai=new Date(d.at).getTime()+7*60*60*1000;
-      pushPoint(d.temperature,d.humidity,tsThai);
-      const tr=document.createElement('tr');
-      tr.innerHTML=`<td>${new Date(d.at).toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
-                    <td>${Number(d.temperature).toFixed(1)}</td>
-                    <td>${Number(d.humidity).toFixed(0)}</td>`;
-      tbody.appendChild(tr);
-    });
-  }catch(e){ console.error('loadHistory error:',e); }
+async function loadHistory(){
+    try{
+        const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`,{cache:"no-store"});
+        const history = await res.json();
+        const tbody = document.querySelector("#history-table tbody");
+        tbody.innerHTML = "";
+        chartData.labels = [];
+        chartData.datasets[0].data = [];
+        chartData.datasets[1].data = [];
+        history.forEach(d=>{
+            const tr=document.createElement('tr');
+            tr.innerHTML=`<td>${new Date(d.at).toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
+                          <td>${Number(d.temperature).toFixed(1)}</td>
+                          <td>${Number(d.humidity).toFixed(0)}</td>`;
+            tbody.appendChild(tr);
+            chartData.labels.push(new Date(d.at).toLocaleTimeString());
+            chartData.datasets[0].data.push(Number(d.temperature).toFixed(1));
+            chartData.datasets[1].data.push(Number(d.humidity).toFixed(1));
+        });
+        weatherChart.update();
+        if(history.length>0){
+            document.getElementById('temperature-value').textContent = Number(history[0].temperature).toFixed(1);
+            document.getElementById('humidity-value').textContent = Number(history[0].humidity).toFixed(0);
+            document.getElementById('status-message').textContent = "Latest data loaded from MongoDB";
+        }
+    }catch(e){ console.error(e); document.getElementById('status-message').textContent="Failed to load history"; }
 }
 
 // --- Fetch realtime data ---
 async function fetchData(){
-  try{
-    const res=await fetch(`${BACKEND_BASE}/data`,{cache:"no-store"});
-    const data=await res.json();
-    if(data.temperature!==null){
-      const t=Number(data.temperature);
-      setText("temperature-value",t.toFixed(1));
-      if(!isNaN(t) && data.humidity!==null){
-        const ts = data.at ? new Date(data.at).getTime()+7*60*60*1000 : Date.now();
-        pushPoint(t,Number(data.humidity),ts);
-      }
-    }
-    if(data.humidity!==null){
-      const h=Number(data.humidity);
-      setText("humidity-value",`${h.toFixed(0)}%`);
-      const donut=document.getElementById('humidity-donut');
-      if(donut) donut.style.setProperty('--p', Math.max(0,Math.min(100,h)));
-    }
-    setText("status-message","Data updated ✅");
-  }catch(err){ console.error(err); setText("status-message","Error fetching data ⚠️"); }
+    try{
+        const res = await fetch(`${BACKEND_BASE}/data`,{cache:"no-store"});
+        const data = await res.json();
+        if(data.temperature!==null) document.getElementById('temperature-value').textContent=Number(data.temperature).toFixed(1);
+        if(data.humidity!==null) document.getElementById('humidity-value').textContent=Number(data.humidity).toFixed(0);
+    }catch(e){ console.error(e); document.getElementById('status-message').textContent="Error fetching data"; }
 }
 
-loadHistory(120).finally(()=>{
-  fetchData();
-  setInterval(fetchData,5000);
-});
+// --- Realtime WebSocket ---
+const ws = new WebSocket('ws://localhost:3001');
+ws.onopen=()=>{ document.getElementById('status-message').textContent='Real-time connection established'; };
+ws.onmessage=(event)=>{
+    try{
+        const data=JSON.parse(event.data);
+        if(data.temperature!==undefined) document.getElementById('temperature-value').textContent=data.temperature.toFixed(1);
+        if(data.humidity!==undefined) document.getElementById('humidity-value').textContent=data.humidity.toFixed(0);
+
+        // Update table
+        const tbody = document.querySelector("#history-table tbody");
+        const newRow = document.createElement("tr");
+        newRow.innerHTML = `<td>${new Date().toLocaleString()}</td>
+                            <td>${data.temperature.toFixed(1)}</td>
+                            <td>${data.humidity.toFixed(0)}</td>`;
+        tbody.insertBefore(newRow, tbody.firstChild);
+        if(tbody.rows.length > MAX_HISTORY) tbody.deleteRow(tbody.rows.length - 1);
+
+        // Update chart
+        const time = new Date().toLocaleTimeString();
+        chartData.labels.push(time);
+        chartData.datasets[0].data.push(data.temperature.toFixed(1));
+        chartData.datasets[1].data.push(data.humidity.toFixed(0));
+        if(chartData.labels.length>MAX_HISTORY){
+            chartData.labels.shift(); chartData.datasets[0].data.shift(); chartData.datasets[1].data.shift();
+        }
+        weatherChart.update();
+    }catch(e){ console.error(e); }
+};
+ws.onerror=(e)=>{ console.error(e); document.getElementById('status-message').textContent='WebSocket error'; };
+ws.onclose=()=>{ document.getElementById('status-message').textContent='WebSocket connection closed'; };
+
+loadHistory();
+setInterval(fetchData,5000);
 </script>
 </body>
 </html>
