--- a/index.html
+++ b/index.html
@@ -3,107 +3,133 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Temperature & Humidity Monitor</title>
+<title>Weather Dashboard</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
+/* --- Global --- */
+* { box-sizing: border-box; margin:0; padding:0; }
 body {
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2em;
-    background: linear-gradient(135deg, #ffecd2, #fcb69f, #a1c4fd, #c2e9fb);
-    margin: 0;
-    color: #333;
-    overflow-x: hidden;
-    position: relative;
+    background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+    min-height: 100vh;
+    color: #fff;
 }
 
-/* ฟองอากาศ */
+/* --- Bubbles --- */
 .bubble {
     position: absolute;
     border-radius: 50%;
-    opacity: 0.6;
-    background: rgba(255, 255, 255, 0.3);
+    opacity: 0.3;
+    background: rgba(255, 255, 255, 0.2);
     animation: rise 15s infinite;
 }
 @keyframes rise {
-    0% { transform: translateY(100vh) scale(0.5); opacity: 0.5; }
-    50% { opacity: 0.8; }
+    0% { transform: translateY(100vh) scale(0.5); opacity: 0.3; }
+    50% { opacity: 0.6; }
     100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
-/* Card layout */
+/* --- Header --- */
+h1 {
+    font-size: 2.5em;
+    margin-bottom: 1em;
+    text-shadow: 1px 1px 10px rgba(0,0,0,0.2);
+}
+
+/* --- Card container --- */
 .container {
     display: flex;
-    gap: 25px;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
-    align-items: center;
-    margin-top: 1.5em;
+    margin-bottom: 2em;
 }
 .card {
+    flex: 1 1 200px;
+    max-width: 220px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 20px;
+    padding: 2em 1em;
     text-align: center;
-    padding: 2em 3em;
-    background-color: rgba(255, 255, 255, 0.85);
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    backdrop-filter: blur(6px);
 }
 .card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    transform: translateY(-8px) scale(1.05);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.25);
 }
-h1 { color: #2c3e50; margin-bottom: 10px; font-weight: 700; }
-.label { font-size: 1.2em; font-weight: 600; color: #7f8c8d; margin-bottom: 10px; }
-.value { font-size: 4em; font-weight: 700; margin: 0; }
-.unit { font-size: 1.3em; color: #95a5a6; }
-#temperature-value { color: #ff6b6b; }
-#humidity-value { color: #4dabf7; }
+.label { font-weight: 600; font-size: 1.2em; margin-bottom: 0.5em; }
+.value { font-size: 3em; font-weight: 700; }
+.unit { font-size: 1.2em; color: rgba(255,255,255,0.7); }
+#temperature-value { color: #ff8c42; }
+#humidity-value { color: #42caff; }
 
+/* --- Status message --- */
 .status-message {
-    margin-top: 1.5em;
-    color: #555;
-    font-size: 1em;
-    background-color: rgba(255,255,255,0.7);
+    margin-bottom: 2em;
+    background: rgba(255,255,255,0.15);
     padding: 10px 20px;
-    border-radius: 8px;
-    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    backdrop-filter: blur(12px);
+    font-weight: 500;
+    text-align: center;
 }
 
+/* --- Table --- */
 table {
-    margin-top: 2em;
-    width: 100%;
-    max-width: 600px;
-    border-collapse: collapse;
-    background: rgba(255, 255, 255, 0.85);
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6px);
-}
-th, td { padding: 12px 16px; text-align: center; border-bottom: 1px solid #eee; }
-th { background: #a1c4fd; color: #fff; }
-tr:hover { background: rgba(255,255,255,0.4); }
-
-/* Chart */
-#chart-container {
-    margin-top: 2em;
     width: 100%;
     max-width: 700px;
-    background: rgba(255,255,255,0.85);
+    border-collapse: collapse;
+    border-radius: 15px;
+    overflow: hidden;
+    margin-bottom: 2em;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+}
+th, td {
+    padding: 12px 16px;
+    text-align: center;
+}
+th {
+    background: rgba(255,255,255,0.2);
+    font-weight: 600;
+    color: #fff;
+}
+tr:hover {
+    background: rgba(255,255,255,0.2);
+    transition: 0.3s;
+}
+
+/* --- Chart container --- */
+#chart-container {
+    width: 100%;
+    max-width: 800px;
     padding: 20px;
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    backdrop-filter: blur(6px);
+    background: rgba(255,255,255,0.1);
+    border-radius: 20px;
+    backdrop-filter: blur(12px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+/* --- Responsive --- */
+@media (max-width: 600px) {
+    .container { flex-direction: column; }
+    .card { max-width: 90%; }
 }
 </style>
 </head>
 <body>
-<h1>Current Weather Conditions</h1>
+
+<h1>Weather Dashboard</h1>
 <div id="bubbles"></div>
 
 <div class="container">
@@ -119,7 +145,7 @@ tr:hover { background: rgba(255,255,255,0.4); }
     </div>
 </div>
 
-<div class="status-message" id="status-message">Connecting...</div>
+<div class="status-message" id="status-message">Loading data...</div>
 
 <h2>History (latest 20 records)</h2>
 <table id="history-table">
@@ -144,10 +170,10 @@ const MAX_HISTORY = 20;
 
 // --- Bubble animation ---
 const bubblesContainer = document.getElementById('bubbles');
-for(let i=0;i<30;i++){
+for(let i=0;i<25;i++){
     const bubble = document.createElement('div');
     bubble.className='bubble';
-    const size=Math.random()*20+10;
+    const size=Math.random()*25+10;
     bubble.style.width=`${size}px`;
     bubble.style.height=`${size}px`;
     bubble.style.left=`${Math.random()*100}vw`;
@@ -159,84 +185,88 @@ for(let i=0;i<30;i++){
 // --- Chart.js setup ---
 const ctx = document.getElementById('weatherChart').getContext('2d');
 const chartData = { labels: [], datasets: [
-    { label: 'Temperature (°C)', data: [], borderColor:'#ff6b6b', backgroundColor:'rgba(255,107,107,0.2)', tension:0.4 },
-    { label: 'Humidity (%)', data: [], borderColor:'#4dabf7', backgroundColor:'rgba(77,171,247,0.2)', tension:0.4 }
+    { label: 'Temperature (°C)', data: [], borderColor:'#ff8c42', backgroundColor:'rgba(255,140,66,0.3)', tension:0.4 },
+    { label: 'Humidity (%)', data: [], borderColor:'#42caff', backgroundColor:'rgba(66,202,255,0.3)', tension:0.4 }
 ]};
-const weatherChart = new Chart(ctx,{type:'line',data:chartData,options:{responsive:true,plugins:{legend:{position:'top'}},scales:{x:{title:{display:true,text:'Time'}},y:{beginAtZero:true}}}});
+const weatherChart = new Chart(ctx,{
+    type:'line',
+    data: chartData,
+    options:{
+        responsive:true,
+        plugins:{legend:{position:'top'}},
+        scales:{x:{title:{display:true,text:'Time'}},y:{beginAtZero:true}}
+    }
+});
 
-// --- Load history ---
+// --- Load history and update chart & table ---
 async function loadHistory(){
     try{
-        const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`,{cache:"no-store"});
+        const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`, {cache:"no-store"});
         const history = await res.json();
         const tbody = document.querySelector("#history-table tbody");
         tbody.innerHTML = "";
         chartData.labels = [];
         chartData.datasets[0].data = [];
         chartData.datasets[1].data = [];
-        history.forEach(d=>{
-            const tr=document.createElement('tr');
+        history.reverse().forEach(d=>{
+            const tr = document.createElement('tr');
             tr.innerHTML=`<td>${new Date(d.at).toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
                           <td>${Number(d.temperature).toFixed(1)}</td>
                           <td>${Number(d.humidity).toFixed(0)}</td>`;
             tbody.appendChild(tr);
             chartData.labels.push(new Date(d.at).toLocaleTimeString());
             chartData.datasets[0].data.push(Number(d.temperature).toFixed(1));
-            chartData.datasets[1].data.push(Number(d.humidity).toFixed(1));
+            chartData.datasets[1].data.push(Number(d.humidity).toFixed(0));
         });
         weatherChart.update();
         if(history.length>0){
             document.getElementById('temperature-value').textContent = Number(history[0].temperature).toFixed(1);
             document.getElementById('humidity-value').textContent = Number(history[0].humidity).toFixed(0);
-            document.getElementById('status-message').textContent = "Latest data loaded from MongoDB";
+            document.getElementById('status-message').textContent = "Latest data loaded";
         }
-    }catch(e){ console.error(e); document.getElementById('status-message').textContent="Failed to load history"; }
+    }catch(e){
+        console.error(e);
+        document.getElementById('status-message').textContent="Failed to load history";
+    }
 }
 
-// --- Fetch realtime data ---
+// --- Fetch latest data every 5 seconds ---
 async function fetchData(){
     try{
-        const res = await fetch(`${BACKEND_BASE}/data`,{cache:"no-store"});
+        const res = await fetch(`${BACKEND_BASE}/data`, {cache:"no-store"});
         const data = await res.json();
-        if(data.temperature!==null) document.getElementById('temperature-value').textContent=Number(data.temperature).toFixed(1);
-        if(data.humidity!==null) document.getElementById('humidity-value').textContent=Number(data.humidity).toFixed(0);
-    }catch(e){ console.error(e); document.getElementById('status-message').textContent="Error fetching data"; }
-}
-
-// --- Realtime WebSocket ---
-const ws = new WebSocket('ws://172.20.10.9:3001');
-ws.onopen=()=>{ document.getElementById('status-message').textContent='Real-time connection established'; };
-ws.onmessage=(event)=>{
-    try{
-        const data=JSON.parse(event.data);
-        if(data.temperature!==undefined) document.getElementById('temperature-value').textContent=data.temperature.toFixed(1);
-        if(data.humidity!==undefined) document.getElementById('humidity-value').textContent=data.humidity.toFixed(0);
+        if(data.temperature!==null) document.getElementById('temperature-value').textContent = Number(data.temperature).toFixed(1);
+        if(data.humidity!==null) document.getElementById('humidity-value').textContent = Number(data.humidity).toFixed(0);
 
         // Update table
         const tbody = document.querySelector("#history-table tbody");
         const newRow = document.createElement("tr");
-        newRow.innerHTML = `<td>${new Date().toLocaleString()}</td>
-                            <td>${data.temperature.toFixed(1)}</td>
-                            <td>${data.humidity.toFixed(0)}</td>`;
+        newRow.innerHTML = `<td>${new Date().toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
+                            <td>${Number(data.temperature).toFixed(1)}</td>
+                            <td>${Number(data.humidity).toFixed(0)}</td>`;
         tbody.insertBefore(newRow, tbody.firstChild);
         if(tbody.rows.length > MAX_HISTORY) tbody.deleteRow(tbody.rows.length - 1);
 
         // Update chart
         const time = new Date().toLocaleTimeString();
         chartData.labels.push(time);
-        chartData.datasets[0].data.push(data.temperature.toFixed(1));
-        chartData.datasets[1].data.push(data.humidity.toFixed(0));
-        if(chartData.labels.length>MAX_HISTORY){
-            chartData.labels.shift(); chartData.datasets[0].data.shift(); chartData.datasets[1].data.shift();
+        chartData.datasets[0].data.push(Number(data.temperature).toFixed(1));
+        chartData.datasets[1].data.push(Number(data.humidity).toFixed(0));
+        if(chartData.labels.length > MAX_HISTORY){
+            chartData.labels.shift();
+            chartData.datasets[0].data.shift();
+            chartData.datasets[1].data.shift();
         }
         weatherChart.update();
-    }catch(e){ console.error(e); }
-};
-ws.onerror=(e)=>{ console.error(e); document.getElementById('status-message').textContent='WebSocket error'; };
-ws.onclose=()=>{ document.getElementById('status-message').textContent='WebSocket connection closed'; };
+    }catch(e){
+        console.error(e);
+        document.getElementById('status-message').textContent="Error fetching data";
+    }
+}
 
+// --- Initialize ---
 loadHistory();
-setInterval(fetchData,5000);
+setInterval(fetchData, 5000);
 </script>
 </body>
 </html>
