--- a/index.html
+++ b/index.html
@@ -3,82 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Weather Dashboard</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<title>Weather Dashboard Mobile</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-/* --- Global --- */
 * { box-sizing: border-box; margin:0; padding:0; }
 body {
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2em;
     background: linear-gradient(135deg, #74ebd5, #ACB6E5);
     min-height: 100vh;
     color: #fff;
-}
-
-/* --- Bubbles --- */
-.bubble {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0.3;
-    background: rgba(255, 255, 255, 0.2);
-    animation: rise 15s infinite;
-}
-@keyframes rise {
-    0% { transform: translateY(100vh) scale(0.5); opacity: 0.3; }
-    50% { opacity: 0.6; }
-    100% { transform: translateY(-10vh) scale(1); opacity: 0; }
+    padding: 1em;
 }
 
 /* --- Header --- */
 h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 1em;
-    text-shadow: 1px 1px 10px rgba(0,0,0,0.2);
+    text-align: center;
+    text-shadow: 1px 1px 8px rgba(0,0,0,0.2);
 }
 
-/* --- Card container --- */
+/* --- Cards --- */
 .container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    margin-bottom: 2em;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    margin-bottom: 1.5em;
 }
 .card {
-    flex: 1 1 200px;
-    max-width: 220px;
-    background: rgba(255,255,255,0.1);
-    border-radius: 20px;
-    padding: 2em 1em;
-    text-align: center;
+    background: rgba(255,255,255,0.15);
     backdrop-filter: blur(12px);
+    border-radius: 20px;
+    padding: 1.5em;
+    text-align: center;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease;
 }
-.card:hover {
-    transform: translateY(-8px) scale(1.05);
-    box-shadow: 0 12px 25px rgba(0,0,0,0.25);
-}
-.label { font-weight: 600; font-size: 1.2em; margin-bottom: 0.5em; }
-.value { font-size: 3em; font-weight: 700; }
-.unit { font-size: 1.2em; color: rgba(255,255,255,0.7); }
+.card:hover { transform: scale(1.03); }
+.label { font-weight: 600; font-size: 1.1em; margin-bottom: 0.3em; }
+.value { font-size: 2.5em; font-weight: 700; }
+.unit { font-size: 1.1em; color: rgba(255,255,255,0.7); }
 #temperature-value { color: #ff8c42; }
 #humidity-value { color: #42caff; }
 
 /* --- Status message --- */
 .status-message {
-    margin-bottom: 2em;
     background: rgba(255,255,255,0.15);
-    padding: 10px 20px;
+    padding: 10px 15px;
     border-radius: 15px;
     backdrop-filter: blur(12px);
+    margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
 }
@@ -86,51 +65,42 @@ h1 {
 /* --- Table --- */
 table {
     width: 100%;
-    max-width: 700px;
     border-collapse: collapse;
     border-radius: 15px;
     overflow: hidden;
-    margin-bottom: 2em;
-    background: rgba(255,255,255,0.1);
+    background: rgba(255,255,255,0.15);
     backdrop-filter: blur(12px);
     box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+    margin-bottom: 1.5em;
 }
 th, td {
-    padding: 12px 16px;
+    padding: 10px 12px;
     text-align: center;
 }
-th {
-    background: rgba(255,255,255,0.2);
-    font-weight: 600;
-    color: #fff;
-}
-tr:hover {
-    background: rgba(255,255,255,0.2);
-    transition: 0.3s;
-}
+th { background: rgba(255,255,255,0.2); font-weight: 600; color: #fff; }
+tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 
-/* --- Chart container --- */
+/* --- Chart --- */
 #chart-container {
     width: 100%;
-    max-width: 800px;
-    padding: 20px;
-    background: rgba(255,255,255,0.1);
+    padding: 15px;
+    background: rgba(255,255,255,0.15);
     border-radius: 20px;
     backdrop-filter: blur(12px);
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    margin-bottom: 2em;
 }
 
 /* --- Responsive --- */
-@media (max-width: 600px) {
-    .container { flex-direction: column; }
-    .card { max-width: 90%; }
+@media (min-width: 600px) {
+    .container { flex-direction: row; justify-content: center; }
+    .card { flex: 1 1 200px; max-width: 220px; }
 }
 </style>
 </head>
 <body>
 
 <h1>Weather Dashboard</h1>
-<div id="bubbles"></div>
 
 <div class="container">
     <div class="card">
@@ -147,12 +117,12 @@ tr:hover {
 
 <div class="status-message" id="status-message">Loading data...</div>
 
-<h2>History (latest 20 records)</h2>
+<h2 style="text-align:center; margin-bottom:0.5em;">History (latest 20 records)</h2>
 <table id="history-table">
     <thead>
         <tr>
             <th>Time</th>
-            <th>Temperature (°C)</th>
+            <th>Temp (°C)</th>
             <th>Humidity (%)</th>
         </tr>
     </thead>
@@ -163,24 +133,9 @@ tr:hover {
     <canvas id="weatherChart"></canvas>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 const BACKEND_BASE = "https://dht-69wz.onrender.com";
 const MAX_HISTORY = 20;
-
-// --- Bubble animation ---
-const bubblesContainer = document.getElementById('bubbles');
-for(let i=0;i<25;i++){
-    const bubble = document.createElement('div');
-    bubble.className='bubble';
-    const size=Math.random()*25+10;
-    bubble.style.width=`${size}px`;
-    bubble.style.height=`${size}px`;
-    bubble.style.left=`${Math.random()*100}vw`;
-    bubble.style.animationDuration=`${10+Math.random()*10}s`;
-    bubble.style.animationDelay=`${Math.random()*5}s`;
-    bubblesContainer.appendChild(bubble);
-}
 
 // --- Chart.js setup ---
 const ctx = document.getElementById('weatherChart').getContext('2d');
@@ -198,7 +153,7 @@ const weatherChart = new Chart(ctx,{
     }
 });
 
-// --- Load history and update chart & table ---
+// --- Load history ---
 async function loadHistory(){
     try{
         const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`, {cache:"no-store"});
@@ -210,7 +165,7 @@ async function loadHistory(){
         chartData.datasets[1].data = [];
         history.reverse().forEach(d=>{
             const tr = document.createElement('tr');
-            tr.innerHTML=`<td>${new Date(d.at).toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
+            tr.innerHTML=`<td>${new Date(d.at).toLocaleTimeString()}</td>
                           <td>${Number(d.temperature).toFixed(1)}</td>
                           <td>${Number(d.humidity).toFixed(0)}</td>`;
             tbody.appendChild(tr);
@@ -230,7 +185,7 @@ async function loadHistory(){
     }
 }
 
-// --- Fetch latest data every 5 seconds ---
+// --- Fetch latest data every 5s ---
 async function fetchData(){
     try{
         const res = await fetch(`${BACKEND_BASE}/data`, {cache:"no-store"});
@@ -241,7 +196,7 @@ async function fetchData(){
         // Update table
         const tbody = document.querySelector("#history-table tbody");
         const newRow = document.createElement("tr");
-        newRow.innerHTML = `<td>${new Date().toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
+        newRow.innerHTML = `<td>${new Date().toLocaleTimeString()}</td>
                             <td>${Number(data.temperature).toFixed(1)}</td>
                             <td>${Number(data.humidity).toFixed(0)}</td>`;
         tbody.insertBefore(newRow, tbody.firstChild);
@@ -264,9 +219,9 @@ async function fetchData(){
     }
 }
 
-// --- Initialize ---
 loadHistory();
 setInterval(fetchData, 5000);
 </script>
+
 </body>
 </html>
