--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ async function fetchData(){
     }
 }
 <div class="footer">
-    <p>Create By: 168 & 196</p>
+    <p>Create By: 66030178 & 66030196</p>
 </div>
 
 loadHistory();
