--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ body {
     align-items: center;
     min-height: 100vh;
     padding: 1em;
-    background: linear-gradient(135deg, #ffd1dc, #caa0f1, #a8f0ff);
+    /* Gradient พาสเทลชมพู → เขียว → ฟ้า */
+    background: linear-gradient(135deg, #ffd1dc, #b0f2b6, #a8f0ff);
     background-size: 400% 400%;
     animation: gradientShift 20s ease infinite;
     color: #fff;
